--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -236,24 +236,29 @@ log.level = {
   allowMultiSign = 1 //mainnet:0 (reset by committee),test:1
 }
 event.subscribe = {
-    path = "/Users/JulianKang/Documents/event-plugin/plugins/mongodbplugin/build/libs/plugin-mongodb-1.0.0.zip"
+    path = "/Users/shulin/Documents/event-plugin/build/plugins/plugin-mongodb-1.0.0.zip"
     server = "127.0.0.1:27017"
     dbconfig="tron|tron|tron"
     topics = [
+//        {
+//          triggerName = "trc20Tracker"
+//          enable = true
+//          topic = "trc20Tracker"
+//        },
+//        {
+//          triggerName = "trc20SolidityTracker"
+//          enable = true
+//          topic = "trc20SolidityTracker"
+//        },
+//        {
+//          triggerName = "blockErased"
+//          enable = true
+//          topic = "blockErased"
+//        },
         {
-          triggerName = "trc20Tracker"
+          triggerName = "shieldedTRC20SolidityTracker"
           enable = true
-          topic = "trc20Tracker"
-        },
-        {
-          triggerName = "trc20SolidityTracker"
-          enable = true
-          topic = "trc20SolidityTracker"
-        },
-        {
-          triggerName = "blockErased"
-          enable = true
-          topic = "blockErased"
+          topic = "shieldedTRC20SolidityTracker"
         }
     ]
 }
