add fullnode and soliditynode shielded trc20 sync

--- a/framework/src/main/resources/config-localtest.conf
+++ b/framework/src/main/resources/config-localtest.conf
@@ -236,7 +236,8 @@ log.level = {
   allowMultiSign = 1 //mainnet:0 (reset by committee),test:1
 }
 event.subscribe = {
-    path = "/Users/shulin/Documents/event-plugin/build/plugins/plugin-mongodb-1.0.0.zip"
+//    path = "/Users/shulin/Documents/event-plugin/build/plugins/plugin-mongodb-1.0.0.zip"
+    path = "/Users/JulianKang/Documents/event-plugin/plugins/mongodbplugin/build/libs/plugin-mongodb-1.0.0.zip"
     server = "127.0.0.1:27017"
     dbconfig="tron|tron|tron"
     topics = [
@@ -255,6 +256,11 @@ event.subscribe = {
 //          enable = true
 //          topic = "blockErased"
 //        },
+        {
+          triggerName = "shieldedTRC20Tracker"
+          enable = true
+          topic = "shieldedTRC20Tracker"
+        },
         {
           triggerName = "shieldedTRC20SolidityTracker"
           enable = true
