--- a/framework/src/main/resources/config.conf
+++ b/framework/src/main/resources/config.conf
@@ -17,29 +17,29 @@ storage {
   # block_KDB, peers, properties, recent-block, trans,
   # utxo, votes, witness, witness_schedule.
 
-  # Otherwise, db configs will remain defualt and data will be stored in
+  # Otherwise, db configs will remain default and data will be stored in
   # the path of "output-directory" or which is set by "-d" ("--output-directory").
 
   # Attention: name is a required field that must be set !!!
   properties = [
-    //    {
-    //      name = "account",
-    //      path = "storage_directory_test",
-    //      createIfMissing = true,
-    //      paranoidChecks = true,
-    //      verifyChecksums = true,
+//    {
+//      name = "account",
+//      path = "storage_directory_test",
+//      createIfMissing = true,
+//      paranoidChecks = true,
+//      verifyChecksums = true,
     //      compressionType = 1,        // compressed with snappy
     //      blockSize = 4096,           // 4  KB =         4 * 1024 B
     //      writeBufferSize = 10485760, // 10 MB = 10 * 1024 * 1024 B
     //      cacheSize = 10485760,       // 10 MB = 10 * 1024 * 1024 B
     //      maxOpenFiles = 100
     //    },
-    //    {
-    //      name = "account-index",
-    //      path = "storage_directory_test",
-    //      createIfMissing = true,
-    //      paranoidChecks = true,
-    //      verifyChecksums = true,
+//    {
+//      name = "account-index",
+//      path = "storage_directory_test",
+//      createIfMissing = true,
+//      paranoidChecks = true,
+//      verifyChecksums = true,
     //      compressionType = 1,        // compressed with snappy
     //      blockSize = 4096,           // 4  KB =         4 * 1024 B
     //      writeBufferSize = 10485760, // 10 MB = 10 * 1024 * 1024 B
@@ -72,8 +72,6 @@ storage {
     bak2path = "bak2/database"
     frequency = 10000   // indicate backup db once every 10000 blocks processed.
   }
-
-  balance.history.lookup = false
 }
 
 node.discovery = {
@@ -84,24 +82,16 @@ node.discovery = {
 }
 
 node.backup {
-  # my priority, each member should use different priority
-  priority = 8
-
-  # udp listen port, each member should have the save configuration
   port = 10001
 
-  # time interval to send keepAlive message, each member should have the save configuration
-  keepAliveInterval = 3000
+  # my priority, each member should use different priority
+  priority = 8
 
   # peer's ip list, can't contain mine
   members = [
     # "ip",
     # "ip"
   ]
-}
-
-crypto {
-  engine = "eckey"
 }
 
 node {
@@ -164,9 +154,7 @@ node {
   ]
 
   http {
-    fullNodeEnable = true
     fullNodePort = 8090
-    solidityEnable = true
     solidityPort = 8091
   }
 
@@ -209,67 +197,8 @@ node {
 
   # Limits the maximum number (default 700) of transaction from network layer
   # netMaxTrxPerSecond = 700
-
-  # open the history query APIs(http&GRPC) when node is a lite fullNode,
-  # like {getBlockByNum, getBlockByID, getTransactionByID...}.
-  # default: false.
-  # note: above APIs may return null even if blocks and transactions actually are on the blockchain
-  # when opening on a lite fullnode. only open it if the consequences being clearly known
-  # openHistoryQueryWhenLiteFN = false
 }
 
-## rate limiter config
-rate.limiter = {
-  # Every api could be set a specific rate limit strategy. Three strategy are supported:GlobalPreemptibleAdapter、IPQPSRateLimiterAdapte、QpsRateLimiterAdapter
-  # GlobalPreemptibleAdapter: permit is the number of preemptible resource, every client must apply one resourse
-  #       before do the request and release the resource after got the reponse automaticlly. permit should be a Integer.
-  # QpsRateLimiterAdapter: qps is the average request count in one second supported by the server, it could be a Double or a Integer.
-  # IPQPSRateLimiterAdapter: similar to the QpsRateLimiterAdapter, qps could be a Double or a Integer.
-  # If do not set, the "default strategy" is set.The "default startegy" is based on QpsRateLimiterAdapter, the qps is set as 10000.
-  #
-  # Sample entries:
-  #
-  http = [
-    #  {
-    #    component = "GetNowBlockServlet",
-    #    strategy = "GlobalPreemptibleAdapter",
-    #    paramString = "permit=1"
-    #  },
-
-    #  {
-    #    component = "GetAccountServlet",
-    #    strategy = "IPQPSRateLimiterAdapter",
-    #    paramString = "qps=1"
-    #  },
-
-    #  {
-    #    component = "ListWitnessesServlet",
-    #    strategy = "QpsRateLimiterAdapter",
-    #    paramString = "qps=1"
-    #  }
-  ],
-
-  rpc = [
-    #  {
-    #    component = "protocol.Wallet/GetBlockByLatestNum2",
-    #    strategy = "GlobalPreemptibleAdapter",
-    #    paramString = "permit=1"
-    #  },
-
-    #  {
-    #    component = "protocol.Wallet/GetAccount",
-    #    strategy = "IPQPSRateLimiterAdapter",
-    #    paramString = "qps=1"
-    #  },
-
-    #  {
-    #    component = "protocol.Wallet/ListWitnesses",
-    #    strategy = "QpsRateLimiterAdapter",
-    #    paramString = "qps=1"
-    #  },
-  ]
-
-}
 
 
 seed.node = {
@@ -281,11 +210,11 @@ seed.node = {
   #   "ip:port"
   # ]
   ip.list = [
-    "54.236.37.243:18888",
+    "3.225.171.164:18888",
     "52.53.189.99:18888",
     "18.196.99.16:18888",
     "34.253.187.192:18888",
-    "52.56.56.149:18888",
+    "18.133.82.227:18888",
     "35.180.51.163:18888",
     "54.252.224.209:18888",
     "18.228.15.36:18888",
@@ -495,6 +424,7 @@ localwitness = [
 #]
 
 block = {
+  stopAt = 1530041577000
   needSyncCheck = true
   maintenanceTimeInterval = 21600000
   proposalExpireTime = 259200000 // 3 day: 259200000(ms)
@@ -522,64 +452,63 @@ committee = {
 }
 
 event.subscribe = {
-  native = {
-    useNativeQueue = true // if true, use native message queue, else use event plugin.
-    bindport = 5555 // bind port
-    sendqueuelength = 1000 //max length of send queue
-  }
-
-  path = "" // absolute path of plugin
-  server = "" // target server address to receive event triggers
-  dbconfig = "" // dbname|username|password
-  contractParse = true,
-  topics = [
-    {
-      triggerName = "block" // block trigger, the value can't be modified
-      enable = false
-      topic = "block" // plugin topic, the value could be modified
-    },
-    {
-      triggerName = "transaction"
-      enable = false
-      topic = "transaction"
-    },
-    {
-      triggerName = "contractevent"
-      enable = false
-      topic = "contractevent"
-    },
-    {
-      triggerName = "contractlog"
-      enable = false
-      topic = "contractlog"
-    },
-    {
-      triggerName = "solidity" // solidity block event trigger, the value can't be modified
-      enable = true            // the default value is true
-      topic = "solidity"
-    },
-    {
-      triggerName = "solidityevent"
-      enable = false
-      topic = "solidityevent"
-    },
-    {
-      triggerName = "soliditylog"
-      enable = false
-      topic = "soliditylog"
+    native = {
+      useNativeQueue = true // if true, use native message queue, else use event plugin.
+      bindport = 5555 // bind port
+      sendqueuelength = 1000 //max length of send queue
     }
-  ]
 
-  filter = {
-    fromblock = "" // the value could be "", "earliest" or a specified block number as the beginning of the queried range
-    toblock = "" // the value could be "", "latest" or a specified block number as end of the queried range
-    contractAddress = [
-      "" // contract address you want to subscribe, if it's set to "", you will receive contract logs/events with any contract address.
+    path = "" // absolute path of plugin
+    server = "" // target server address to receive event triggers
+    dbconfig="" // dbname|username|password
+    contractParse = true,
+    topics = [
+        {
+          triggerName = "block" // block trigger, the value can't be modified
+          enable = false
+          topic = "block" // plugin topic, the value could be modified
+        },
+        {
+          triggerName = "transaction"
+          enable = false
+          topic = "transaction"
+        },
+        {
+          triggerName = "contractevent"
+          enable = false
+          topic = "contractevent"
+        },
+        {
+          triggerName = "contractlog"
+          enable = false
+          topic = "contractlog"
+        },
+        {
+          triggerName = "solidity" // solidity block event trigger, the value can't be modified
+          enable = true            // the default value is true
+          topic = "solidity"
+        },
+        {
+          triggerName = "solidityevent"
+          enable = false
+          topic = "solidityevent"
+        },
+        {
+          triggerName = "soliditylog"
+          enable = false
+          topic = "soliditylog"
+        }
     ]
 
-    contractTopic = [
-      "" // contract topic you want to subscribe, if it's set to "", you will receive contract logs/events with any contract topic.
-    ]
-  }
+    filter = {
+       fromblock = "" // the value could be "", "earliest" or a specified block number as the beginning of the queried range
+       toblock = "" // the value could be "", "latest" or a specified block number as end of the queried range
+       contractAddress = [
+           "" // contract address you want to subscribe, if it's set to "", you will receive contract logs/events with any contract address.
+       ]
 
+       contractTopic = [
+           "" // contract topic you want to subscribe, if it's set to "", you will receive contract logs/events with any contract topic.
+       ]
+    }
 }
